sync with code skills project update